fix(intouch-frontend): fix z-index issues in navigation

--- a/applications/intouch/frontend/components/Layout/styles.module.scss
+++ b/applications/intouch/frontend/components/Layout/styles.module.scss
@@ -8,7 +8,7 @@ $tablet-width: 1024px;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
   clip-path: inset(0px -3px 0px 0px);
   height: 100vh;
-  z-index: 1301;
+  z-index: 1250;
   position: sticky;
   background-color: $color-white;
   flex-shrink: 0;
